# TMA4280-Supercomputing-Introduction

./: CMakeLists.txt  README.md  bash_script.slurm  hello  test.cpp
TestRun/: CMakeCache.txt  Heihei.txt  Makefile  cmake_install.cmake  mach0  mach0_vtest.txt  mach1  mach2  mach3  mach4  zeta0  zeta0_vtest.txt  zeta1  zeta2  zeta3  zeta4
mach0/: M_q1.cpp  RZ_q1.cpp  findPi_M.cpp  findPi_M.h  main.cpp  test_findPi_M.cpp  test_verification_M.cpp
mach1/: data_distribution_M.cpp  main.cpp
mach2/: main.cpp
mach3/: main.cpp
mach4/: main.cpp
zeta0/: findPi_RZ.cpp  findPi_RZ.h  main.cpp  test_findPi_RZ.cpp  test_verification_RZ.cpp
zeta1/: data_distribution_RZ.cpp  main.cpp
zeta2/: main.cpp
zeta3/: main.cpp
zeta4/: main.cpp
